fix: hero spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,18 @@
-
-
 .social-sidebar {
-    position: fixed;
-    top: 50%;
-    right: 0%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
+  position: fixed;
+  top: 50%;
+  right: 0%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.social-button:hover {
+  opacity: 0.7;
+}
+
+@media only screen and (max-width: 767px) {
+  .social-sidebar {
+    display: none !important;
   }
-  
-  .social-button:hover {
-    opacity: 0.7;
-  }
+}
